<resources>
    <string name="app_name">Kittaro\'s message</string>
    <string name="button_go_to_battle_title">Battle</string>
    <string name="button_new_game_title">New game</string>
    <string name="button_hero_screen_title">Heroes</string>
    <string name="button_exit_game_title">Exit game</string>
    <string name="button_continue_game_title">Continue</string>
    <string name="image_description_main_menu_background" translatable="false">Main menu background</string>
    <string name="button_confirm_title">Confirm</string>
    <string name="button_deny_title">Deny</string>
    <string name="text_warning_message">New game will erase any progress done so far.\nAre you sure?</string>
    <string name="text_cell_name" translatable="false">Name</string>
    <string name="text_next_scene" translatable="false">Go</string>
    <string name="text_history_stub" translatable="false">\u0020</string>
    <string name="button_transform_life_to_energy_hex_title" translatable="false">5L -> 1E</string>
    <string name="button_transform_life_to_attack_hex_title" translatable="false">3L -> 1A</string>
    <string name="button_transform_life_to_death_ray_hex_title" translatable="false">10L -> 1D</string>
    <string name="button_transform_life_to_omni_bullet_hex_title" translatable="false">15L -> 1O</string>
    <string name="button_transform_energy_to_life_hex_title" translatable="false">1E -> 5L</string>
    <string name="button_transform_attack_to_life_hex_title" translatable="false">1A -> 3L</string>
    <string name="button_transform_death_ray_to_life_hex_title" translatable="false">1D -> 10L</string>
    <string name="button_transform_omni_bullet_to_life_hex_title" translatable="false">1O -> 15L</string>
    <string name="radio_button_life_cell_title" translatable="false">Life</string>
    <string name="radio_button_energy_cell_title" translatable="false">Energy</string>
    <string name="radio_button_attack_cell_title" translatable="false">Attack</string>
    <string name="radio_button_remove_cell_title" translatable="false">Remove</string>
    <string name="button_finish_battle_title" translatable="false">View results</string>
    <string name="reward_title" translatable="false">Reward:</string>
    <string name="button_to_heroes_screen" translatable="false">To heroes screen</string>
    <string name="button_try_again" translatable="false">Try again</string>
    <string name="button_ok" translatable="false">Save</string>
    <string name="button_cancel" translatable="false">Cancel</string>
    <string name="button_add_new_rule_title">Add rule</string>
    <string name="button_add_new_condition_title">Add condition</string>
    <string name="condition_representation" translatable="false">(%1$s %2$s %3$s)</string>
    <string name="utf_icon_north_direction">North</string>
    <string name="utf_icon_north_east_direction">North-east</string>
    <string name="utf_icon_south_east_direction">South-east</string>
    <string name="utf_icon_south_direction">South</string>
    <string name="utf_icon_south_west_direction">South-west</string>
    <string name="utf_icon_north_west_direction">North-west</string>
    <string name="utf_icon_direction_to_nearest_enemy">Direction to the enemy</string>
    <string name="utf_icon_distance_to_nearest_enemy">Distance to the enemy</string>
    <string name="utf_icon_equality">Equal</string>
    <string name="utf_icon_less_than">Less than</string>
    <string name="utf_icon_greater_than">Greater than</string>
    <string name="utf_icon_increase_priority">Increase</string>
    <string name="utf_icon_decrease_priority">Decrease</string>
    <string name="utf_icon_digit_zero">Zero</string>
    <string name="utf_icon_digit_one">One</string>
    <string name="utf_icon_digit_two">Two</string>
    <string name="utf_icon_digit_three">Three</string>
    <string name="utf_icon_digit_four">Four</string>
    <string name="utf_icon_digit_five">Five</string>
    <string name="utf_icon_digit_six">Six</string>
    <string name="utf_icon_digit_seven">Seven</string>
    <string name="utf_icon_digit_eight">Eight</string>
    <string name="utf_icon_digit_nine">Nine</string>
    <string name="image_description_cut_scene_background" translatable="false">Cut scene background</string>
    <string name="image_description_cut_scene_left_character" translatable="false">Left character</string>
    <string name="image_description_cut_scene_right_character" translatable="false">Right character</string>
    <string name="button_previous_frame_title" translatable="false">prev</string>
    <string name="button_next_frame_title" translatable="false">next</string>
    <string name="button_yes_title" translatable="false">yes</string>
    <string name="button_no_title" translatable="false">no</string>
    <string name="next_scene" translatable="false">next_scene</string>
    <string name="previous_scene" translatable="false">previous_scene</string>
    <string name="nav_id_main_fragment" translatable="false">mainFragment</string>
    <string name="nav_id_heroScreen" translatable="false">heroScreen</string>
    <string name="nav_id_cutSceneAfterGopniks" translatable="false">cutSceneAfterGopniks</string>
    <string name="nav_id_cutSceneBeforeSkilos" translatable="false">cutSceneBeforeSkilos</string>
    <string name="nav_id_cutSceneAfterSkilos" translatable="false">cutSceneAfterSkilos</string>
    <string name="nav_id_cutSceneGonato" translatable="false">cutSceneGonato</string>
    <string name="nav_id_cutSceneAfterBelos" translatable="false">cutSceneAfterBelos</string>
    <string name="nav_id_cutSceneAnalafro" translatable="false">cutSceneAnalafro</string>
    <string name="nav_id_cutSceneAfterOmikhli" translatable="false">cutSceneAfterOmikhli</string>
    <string name="nav_id_cutSceneKilia" translatable="false">cutSceneKilia</string>
    <string name="nav_id_cutSceneAfterNikhteribs" translatable="false">cutSceneAfterNikhteribs</string>
    <string name="nav_id_cutSceneKardia" translatable="false">cutSceneKardia</string>
    <string name="nav_id_cutSceneAfterDrunkards" translatable="false">cutSceneAfterDrunkards</string>
    <string name="nav_id_cutSceneLaimo" translatable="false">cutSceneLaimo</string>
    <string name="nav_id_cutSceneAfterKatofiPonu" translatable="false">cutSceneAfterKatofiPonu</string>
    <string name="nav_id_cutSceneEnkefalio" translatable="false">cutSceneEnkefalio</string>
    <string name="nav_id_cutSceneFinalAct" translatable="false">cutSceneFinalAct</string>
    <string name="nav_id_heroScreenAfterGopniks" translatable="false">heroScreenAfterGopniks</string>
    <string name="nav_id_heroScreenAfterSkilos" translatable="false">heroScreenAfterSkilos</string>
    <string name="nav_id_heroScreenAfterBelos" translatable="false">heroScreenAfterBelos</string>
    <string name="nav_id_heroScreenAfterOmikhli" translatable="false">heroScreenAfterOmikhli</string>
    <string name="nav_id_heroScreenAfterNikhteribs" translatable="false">heroScreenAfterNikhteribs</string>
    <string name="nav_id_heroScreenAfterDrunkards" translatable="false">heroScreenAfterDrunkards</string>
    <string name="nav_id_heroScreenAfterKatofiPonu" translatable="false">heroScreenAfterKatofiPonu</string>
</resources>