<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_zero"
        android:title="@string/utf_icon_digit_zero"
        android:icon="@drawable/ic_expected_value_0"/>
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_one"
        android:title="@string/utf_icon_digit_one"
        android:icon="@drawable/ic_expected_value_1"/>
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_two"
        android:title="@string/utf_icon_digit_two"
        android:icon="@drawable/ic_expected_value_2"/>
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_three"
        android:title="@string/utf_icon_digit_three"
        android:icon="@drawable/ic_expected_value_3"/>
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_four"
        android:title="@string/utf_icon_digit_four"
        android:icon="@drawable/ic_expected_value_4"/>
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_five"
        android:title="@string/utf_icon_digit_five"
        android:icon="@drawable/ic_expected_value_5"/>
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_six"
        android:title="@string/utf_icon_digit_six"
        android:icon="@drawable/ic_expected_value_6"/>
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_seven"
        android:title="@string/utf_icon_digit_seven"
        android:icon="@drawable/ic_expected_value_7"/>
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_eight"
        android:title="@string/utf_icon_digit_eight"
        android:icon="@drawable/ic_expected_value_8"/>
    <item
        android:id="@+id/expected_value_distance_to_nearest_enemy_nine"
        android:title="@string/utf_icon_digit_nine"
        android:icon="@drawable/ic_expected_value_9"/>
</menu>