<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_rotate_north"
        android:title="@string/utf_icon_north_direction"/>
    <item
        android:id="@+id/action_rotate_north_east"
        android:title="@string/utf_icon_north_east_direction"/>
    <item
        android:id="@+id/action_rotate_south_east"
        android:title="@string/utf_icon_south_east_direction"/>
    <item
        android:id="@+id/action_rotate_south"
        android:title="@string/utf_icon_south_direction"/>
    <item
        android:id="@+id/action_rotate_south_west"
        android:title="@string/utf_icon_south_west_direction"/>
    <item
        android:id="@+id/action_rotate_north_west"
        android:title="@string/utf_icon_north_west_direction"/>
</menu>