<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_description_cut_scene_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/leftCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description_cut_scene_left_character"
        app:srcCompat="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/rightCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description_cut_scene_right_character"
        app:srcCompat="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightCharacter"
        app:layout_constraintStart_toEndOf="@id/leftCharacter" />

    <Button
        android:id="@+id/buttonPreviousFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_previous_frame_title"
        app:layout_constraintStart_toEndOf="@id/leftCharacter"
        app:layout_constraintBottom_toTopOf="@id/textView" />

    <Button
        android:id="@+id/buttonNextFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next_frame_title"
        app:layout_constraintEnd_toStartOf="@id/rightCharacter"
        app:layout_constraintBottom_toTopOf="@id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>